--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
     height: 100vh;
     width: 100vw;
     margin: 0;
-    background: linear-gradient(-45deg, #BF348E, #D984C2, #6F36BF, #6BA7BF, #4ED998);
+    background: linear-gradient(-45deg, #F20544, #F2B28D, #8C0303);
 	background-size: 400% 400%;
 	animation: gradient 20s ease infinite;
 }
