--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -12,17 +12,32 @@
     margin: 0;
 }
 
-h2 {
-    position: relative;
-    font-weight: 900;
-    font-size: 2em;
+.fade {
+    font-family: Arial;
+    font-size: 150px;
+    animation: fadeIn 2.5s;
 }
 
-h2 .letters {
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+.titleAnime {
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+.titleAnime .letters {
     position: absolute;
     margin: auto;
-    left: 0;
-    top: 0.3em;
-    right: 0;
-    opacity: 1; 
+    opacity: 0; 
+}
+
+.homeCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
